2008-03-09  Inge Wallin  <inge@lysator.liu.se>

	Continue towards pure Projection usage.
	* src/lib/MeasureTool.{h,cpp} (drawPath): Remove function

	Get rid of unnecessary members in GridMap.
	* src/lib/GridMap.{h,cpp} (resizeMap): remove function
	(m_imageWidth, m_imageHeight, m_imageRadius): remove members
	* src/lib/MarbleModel.cpp (resize): Don't call Gridmap::resizeMap

2008-03-08  Inge Wallin  <inge@lysator.liu.se>

	Simplify the GridMap
	* src/lib/GridMap.{h,cpp}:
	 - Remove private members m_radius, m_precision and m_planetAxis
	 - Use ViewportParams instead of ViewParams everywhere.
	 - send a precision parameter to all CreateCircle functions.
	* src/lib/MarbleModel.cpp: Use new call conventions (ViewportParams)
	
2008-03-08  Torsten Rahn  <rahn@kde.org>

    * src/lib/geodata/handlers/dgml/DGMLHeadTagHandler.cpp:
    * src/lib/geodata/handlers/dgml/DGMLDocumentTagHandler.cpp:
    * src/lib/geodata/handlers/dgml/DGMLNameTagHandler.cpp:
    * src/lib/geodata/GeoDataTest.cpp:
    * src/lib/geodata/parser/GeoParser.cpp:
    * src/lib/geodata/CMakeLists.txt:
    * src/lib/geodata/scene/GeoSceneHead.{cpp,h}:
    * src/lib/geodata/scene/GeoSceneSettings.h:
    * src/lib/geodata/scene/GeoSceneDocument.{cpp,h}:

    Adding Name and Description tag - description tag doesn't get 
    recognized properly due to parent identification not working 
    correctly yet ...

2008-03-07  Inge Wallin  <inge@lysator.liu.se>

	Enable the new projection based measuretool.
	* src/lib/MeasureTool.cpp (drawDistancePath): use drawPath()
	instead of individual functions.
	(drawPath): draw a red line instead of white crosses.
	* src/lib/MercatorProjection.cpp (screenCoordinates): Bugfix for
	the +- issue

2008-03-06  Torsten Rahn  <rahn@kde.org>

	Fix transformation bugs where + and - were mixed up.
	* src/lib/SphericalProjection.cpp (screenCoordinates): bugfix
	* src/lib/EquirectProjection.cpp (screenCoordinates): bugfix

2008-03-07  Inge Wallin  <inge@lysator.liu.se>
